Fix invisible hover.

--- a/services/web/public/stylesheets/app/editor/review-panel.less
+++ b/services/web/public/stylesheets/app/editor/review-panel.less
@@ -70,8 +70,8 @@
 	.rp-size-mini & {
 		display: block;
 		width: @review-off-width;
-		overflow: hidden;
 	}
+	
 	position: absolute;
 	top: 0px;
 	bottom: 0px;
@@ -149,9 +149,9 @@
 }
 
 .rp-entry-wrapper {
-	&:hover > .rp-entry-insert,
-	&:hover > .rp-entry-delete,
-	&:hover > .rp-entry-comment {
+	&:hover .rp-entry-insert,
+	&:hover .rp-entry-delete,
+	&:hover .rp-entry-comment {
 		display: block;
 	}
 }
